# nl.daandobber.musicplayer

./: .gitignore  Makefile  README.md
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  album_art.c  album_art.h  app_settings.c  app_settings.h  audio_analysis.c  audio_analysis.h  audio_player.c  audio_player.h  effects.c  effects.h  idf_component.yml  jellyfin_client.c  jellyfin_client.h  lastfm_scrobbler.c  lastfm_scrobbler.h  main.c  media_library.c  media_library.h  wifi_setup.c  wifi_setup.h
sdkconfigs/: tanmatsu
